     Skynet.fork_and_exec prevents file descriptor exhaustion by calling Skynet.close_file_handles.
     Skynet::Manager detatches from console by calling Skynet.close_console

 - You now have to specify your PIDFILE and LOGFILE dirs and files differently. This will break all old skynet runners. Sorry.
 - Skynet runner handles default config variables better
 - Added Skynet::Job.results_by_job_id to retrieve results from asyncronous jobs
 - Added printlog logging method which always prints to the log as [LOG]
 - Deprecated Skynet.new to Skynet.start 
 - Mysql Message Queue Adapter - Make delete_expired_messages much safer.
 - ActiveRecord::Base.distributed_find - Patch submitted by Lourens Naude (lourens@methodmissing.com) which checks the model for the primary_key name as opposed to assuming it is
  'id'
 - We don't want to use rails constantize so I've temporarily borrowed the method from ActiveSupport inflector and added it to skynet_ruby_extensions.
 - Fix bug in Job comment where it referenced MapreduceTest instead of Skynet::MapreduceTest 
 - Fix tests. For some reason you still can't run ALL the test at once with rake test, but if the files are run individually they all pass.
 - Change mysql text fields to longtext in migration and schema files
 - Include some extras including our init.d script, our nagios monitoring script, rails controller and view for monitoring
 - Created a new skynet rails initializer which gets installed from skynet_install --rails
 - Modified the skynet_install skynet runner to take skynet initializer into account
 - Skynet::ActiveRecordExtensions Fixed a bug where it would fail if your table had fewer than 1000 rows.  It performs a count
  first now to make sure there are enough rows.
 - Introduced some new Skynet::Config methods for getting logfile and pidfile locations 
 
 
Skynet Manager/Worker Refactor